# curve-fit

./: Cargo.toml  README.md  build_and_push.sh  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  domain.rs  fit.rs  lib.rs  main.rs  models.rs
src/app/: bootstrap.rs  clipboard_import.rs  diagnostics.rs  file_import.rs  fit_worker.rs  formula.rs  i18n.rs  input_parse.rs  layout.rs  model_catalog.rs  normalization.rs  optimizer.rs  panel_state.rs  param_init.rs  plot_utils.rs  point_layers.rs  points_state.rs  points_text.rs  replay.rs  result_export.rs  state.rs  status.rs  style.rs  tests.rs  types.rs  ui.rs
src/app/tests/: fit_lifecycle.rs  formula_rendering.rs  import_export.rs  init_optimizer.rs  points_editing.rs  replay_diagnostics.rs
src/app/ui/: diagnostics_panel.rs  family_params.rs  formula_window.rs  header_bar.rs  optimizer_panel.rs  plot_panel.rs  points_editor_panel.rs  result_panel.rs  status_panel.rs
src/domain/: error.rs  family.rs  fit_result.rs  optimizer.rs  params.rs  point.rs  saturating_trend.rs  tests.rs
src/domain/tests/: basics.rs  optimizer.rs  params.rs
src/fit/: common.rs  curve.rs  error.rs  finite_diff.rs  metrics.rs  optimizer_engine.rs  parametric.rs  simd.rs  spline.rs  spline_core.rs  tests.rs
src/fit/tests/: finite_diff_simd.rs  metrics_quantization.rs  parametric_optimizers.rs  spline.rs
src/models/: arctangent_step.rs  arrhenius.rs  bi_exponential.rs  common.rs  damped_sinusoid.rs  data_term.rs  dispatch.rs  emg.rs  exponential_basic.rs  exponential_half_life.rs  exponential_linear.rs  falling_exponential.rs  five_pl.rs  four_pl.rs  gaussian.rs  gompertz.rs  hyperbolic_tangent.rs  inverse.rs  logistic.rs  lorentzian.rs  loss.rs  michaelis_menten.rs  natural_log.rs  objective.rs  polynomial.rs  power.rs  pseudo_voigt.rs  rational_11.rs  rational_22.rs  rational_nn.rs  saturating_trend_basis.rs  simd_tests.rs  softplus.rs  term.rs  test_support.rs  tests.rs
tests/: simd_perf_gate.rs
web/: index.html
