[package]
name = "curve-fit"
version = "0.1.2"
edition = "2024"
authors = ["hexqnt <hexqntlab@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A training application for fitting curve parameters to a set of points."
repository = "https://github.com/hexqnt/curve-fit"
homepage = "https://curve-fit.hexq.ru"
readme = "README.md"
keywords = ["curve-fitting", "spline", "optimization", "egui", "wasm"]
categories = ["science", "mathematics", "visualization", "gui"]

[dependencies]
argmin = { version = "0.11.0", default-features = false }
argmin-math = { version = "0.5.1", default-features = false, features = [
    "vec",
] }
eframe = "0.33.3"
egui_extras = { version = "0.33.3", default-features = false, features = [
    "svg_text",
] }
egui_plot = "0.34.1"
trunk = "0.21.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sys-locale = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.91", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Window",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
