[package]
name = "curve-fit"
version = "0.1.7"
edition = "2024"
authors = ["hexqnt <hexqntlab@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A training application for fitting curve parameters to a set of points."
repository = "https://github.com/hexqnt/curve-fit"
homepage = "https://curve-fit.hexq.ru"
readme = "README.md"
keywords = ["curve-fitting", "spline", "optimization", "egui", "wasm"]
categories = ["science", "mathematics", "visualization", "gui"]

[features]
default = ["portable-simd"]
portable-simd = []

[dependencies]
argmin = { version = "0.11.0", default-features = false }
argmin-math = { version = "0.5.1", default-features = false, features = [
    "vec",
    "ndarray_v0_16-nolinalg",
] }
egui_extras = { version = "0.34.1", default-features = false, features = [
    "svg_text",
] }
egui_plot = "0.35.0"
ndarray = "0.16.1"
stochastic_optimizers = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
sys-locale = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-time = "1.1.0"
web-sys = { version = "0.3.95", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Window",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
